When the Bump node is placed in a node-group, bump is not working. #69672

Closed
opened 2019-09-09 14:52:52 +02:00 by rob wesseling · 7 comments

System Information
Operating system: Windows-10-10.0.18362 64 Bits
{F7727044}Graphics card: GeForce GTX 1080 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 417.01

Blender Version
Broken: version: 2.81 (sub 8), branch: master, commit date: 2019-09-08 21:40, hash: f3a4f12ac0
Worked: (Blender 2.81 build September 04)

Short description of error
When the Bump node is placed in a node-group, bump is not working (as it should).

Exact steps for others to reproduce the error

  1. Add a plane and give it a new material
  2. Add: bump node and a texture. Noise for example.
  3. Connect Noise texture (Fac) to height socket of bump node.
  4. Connect the normal of the bump node (out) to the normal (in) of principled BSDF).

This works. But now;
5) Make a NodeGroup of the Bump node and the noise texture
6) Connect this nodegroup with the prinicpled shader (normal and optionally Base Color).
Now there is no bump, and if you adjust the strength strange things are going on with the normals.

BumpmapInNodeGroup.blend

**System Information** Operating system: Windows-10-10.0.18362 64 Bits {[F7727044](https://archive.blender.org/developer/F7727044/BumpmapInNodeGroup.blend)}Graphics card: GeForce GTX 1080 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 417.01 **Blender Version** Broken: version: 2.81 (sub 8), branch: master, commit date: 2019-09-08 21:40, hash: `f3a4f12ac0` Worked: (Blender 2.81 build September 04) **Short description of error** When the Bump node is placed in a node-group, bump is not working (as it should). **Exact steps for others to reproduce the error** 1) Add a plane and give it a new material 2) Add: bump node and a texture. Noise for example. 3) Connect Noise texture (Fac) to height socket of bump node. 4) Connect the normal of the bump node (out) to the normal (in) of principled BSDF). This works. But now; 5) Make a NodeGroup of the Bump node and the noise texture 6) Connect this nodegroup with the prinicpled shader (normal and optionally Base Color). Now there is no bump, and if you adjust the strength strange things are going on with the normals. [BumpmapInNodeGroup.blend](https://archive.blender.org/developer/F7727044/BumpmapInNodeGroup.blend)
Author

Added subscriber: @RobertWesseling

Added subscriber: @RobertWesseling

#69774 was marked as duplicate of this issue

#69774 was marked as duplicate of this issue
Clément Foucault was assigned by Brecht Van Lommel 2019-09-09 14:56:31 +02:00

Added subscriber: @RodDavis

Added subscriber: @RodDavis

In #69619#771183, @RodDavis wrote:
Normals do not behave normally if the bump node is within a node group. The Bump node has extra hidden code now. These hidden values are Height_dx and Height_dy.

Steps:
If you group a single bump node you can get these hidden Height values. Once grouped, the Height_dx/dy can be influenced outside the node. Even if it doesn't look like it's connected to anything.
image.png


Just adding more info

> In #69619#771183, @RodDavis wrote: > Normals do not behave normally if the bump node is within a node group. The Bump node has extra hidden code now. These hidden values are Height_dx and Height_dy. > > Steps: > If you group a single bump node you can get these hidden Height values. Once grouped, the Height_dx/dy can be influenced outside the node. Even if it doesn't look like it's connected to anything. > ![image.png](https://archive.blender.org/developer/F7721907/image.png) > > ---- > Just adding more info
Member

Added subscribers: @A.Lyons, @lichtwerk

Added subscribers: @A.Lyons, @lichtwerk

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

This issue was referenced by 3a1b0c0f30

This issue was referenced by 3a1b0c0f3035afcfb5f082bb43b27296cc94dafe
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#69672
No description provided.